fix padding of notifications on small screens

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -113,7 +113,7 @@ hr {
     list-style: none; }
     #notifications > li {
         background-color: #E8C754;
-        padding: 10px 20px; }
+        padding: 10px 0; }
         #notifications .notificationContent { }
             #notifications .notificationContent > p:last-child {
                 margin-bottom: 0; }
